# OOP_laba_3

./: CMakeLists.txt
include/: Array.h  Figure.h  Pentagon.h  Rhombus.h  Trapezoid.h  utils.h
src/: Array.cpp  Figure.cpp  Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp  main.cpp
tests/: tests.cpp
